public/css/style.css
body {
    font-family: "Plus Jakarta Sans", sans-serif !important;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.container {
    flex: 1;
}


/* Navbar */

.navbar {
    height: 5rem;
    background-color: white;
}

.fa-compass {
    color: #fe424d;
    font-size: 2.5rem;
}

.nav-link {
    color: #222222 !important;
}

.f-info-socials,
.f-info-brand {
    width: 100%;
    vertical-align: middle;
    display: flex;
    align-items: center;
    justify-content: center;
} 

.f-info-socials {
    width: 100%;
    font-size: 1.2rem;
}

.f-info-socials i {
    margin-right: 1rem;
    font-size: 1.2rem;
}

.f-info {
    display: flex;
    height: 6rem;
    background-color: #ebebeb;
    flex-wrap: wrap;
    justify-content: center;
    align-items: space-evenly;
    text-align: center;
}



/* cards */
/* Listing and show cards */
.card {
  max-width: 750px;
  margin: 0 auto;
}

.listing-card, .show-card, .show-card-body {
    border: none !important;
    margin-bottom: 2rem;
}

.card-img-top {
    border-radius: 1rem !important;
}

.card-body {
    padding: 0 !important;
}

.card-title {
    font-weight: 600;
}

.listing-link {
    text-decoration: none;
    color: black;
}

/* Card Effect */
.card-img-overlay {
    opacity: 0;
}

.card-img-overlay:hover {
    opacity: 0.1;
    transition: 0.5s ease;
    background-color: white;
}

/* Add new form */
.add-btn {
    background-color: #fe424d !important;
    border: none !important;
}

/* Edit form */
.edit-btn {
    background-color: #fe424d !important;
    border: none !important;
}

.btn-success {
    background-color: #fe424d !important;
    border: none !important;
}

/* Show Page */
.show-img {
    height: 50vh;
}

.btns {
    display: flex;
}

.edit, .delete {
    background-color: #fe424d !important;
    border: none !important;
}

/* Map styling */
#map {
    border-radius: 5px;
    height: 400px;
}

#mapContainer {
    height: 90vh;
}

@media (max-width: 576px) {
    #map {
        height: 70% !important;
    }

    #mapContainer {
        height: 80vh;
    }
}

